<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_arrow_back"
                android:id="@+id/btnBack"
                android:padding="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Register"
                android:layout_gravity="center_vertical"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:textColor="@color/white" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtUsername"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtEmail"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true" />


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="12dp"
                android:weightSum="100">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pinCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="50"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:maxLength="6"
                        android:id="@+id/txtPinCode"
                        android:hint="@string/prompt_pinCode"
                        android:inputType="numberDecimal"
                        android:selectAllOnFocus="true" />


                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/validate"
                    android:id="@+id/btnValidatePin"
                    android:layout_weight="40"
                    android:enabled="false"
                    android:layout_marginStart="20dp"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                style="@style/TextAppearance.AppCompat.Widget.DropDownItem">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtCity"
                    android:hint="@string/prompt_city"
                    android:enabled="false"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtDistrict"
                    android:hint="@string/prompt_district"
                    android:enabled="false"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtState"
                    android:hint="@string/prompt_state"
                    android:enabled="false"
                    android:inputType="text"
                    android:selectAllOnFocus="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/txtPassword"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/action_register"
            android:enabled="false"
            android:layout_gravity="center_horizontal" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

</LinearLayout>