<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radio_group"
        android:layout_marginTop="12dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pin_code"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:checked="true"
            android:id="@+id/rb_pinCode" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/district"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/rb_district" />


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/rb_state" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_group"
        android:id="@+id/pinCodeLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLength="6"
                android:id="@+id/txtPinCode"
                android:hint="@string/prompt_pinCode"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@id/pinCode"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtState"
                android:hint="@string/state"
                android:inputType="text"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_below="@id/state"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/txtDistrict"
                android:hint="@string/district"
                android:inputType="text"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:id="@+id/btnSubmit"
            android:layout_centerHorizontal="true"
            android:text="Submit" />

    </RelativeLayout>


</RelativeLayout>